--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -280,7 +280,7 @@
                     border-bottom: 1px solid #e5e8ec;
                     .col{
                         font-weight: bold;
-                        color: #26344a;
+                        color: #202124;
                     }
                 }
                 .col{
@@ -464,7 +464,7 @@
                         padding: 0 10px;
                     }
                     .info-content-sec{
-                        color: #26344a;
+                        color: #202124;
                         font-size: 14px;
                         padding: 0 10px;
                         .external_link{
@@ -523,7 +523,7 @@
                         }
                     }
                     .right-info-title{
-                        color: #26344a;
+                        color: #202124;
                         font-size: 14px;
                         padding-left: 25px;
                         a{
@@ -559,7 +559,7 @@
                                 display: block;
                                 padding: 15px;
                                 text-decoration: none !important;
-                                color: #26344a;
+                                color: #202124;
                                 // border-bottom: 1px solid #e5e8ec;
                                 position: relative;
                                 &.collapsed{
@@ -596,11 +596,11 @@
                                 .content{
                                     .link-name{
                                         font-size: 14px;                                       
-                                        color: #26344a;
+                                        color: #202124;
                                     }
                                     .date{
                                         font-size: 14px;                                        
-                                        color: #26344a;
+                                        color: #202124;
                                     }
                                     .actions{
                                         text-align: right;
