--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -238,7 +238,7 @@
                         font-size: 12px;
                         font-weight: bold;
                         font-family: Inter;
-                        color: #26344a;
+                        color: #202124;
                         line-height: 45px;
                         border-bottom: 1px solid #e5e8ec;
                         display: block;
@@ -310,7 +310,7 @@
                         font-size: 15px;
                         font-weight: 600;
                         text-align: left;
-                        color: #26344a;
+                        color: #202124;
                         margin-top: 0;
                         line-height: 1;
                         span{
