--- a/findly-builder/src/app/components/import-faqs-modal/import-faqs-modal.component.scss
+++ b/findly-builder/src/app/components/import-faqs-modal/import-faqs-modal.component.scss
@@ -55,7 +55,7 @@
                     font-weight: 500;
                 }
                 .backup-message {
-                    color: #26344a;
+                    color: #202124;
                     font-size: 14px;
                     line-height: 1.43;
                     margin-bottom: 30px;
