--- a/findly-builder/src/app/components/summary/summary.component.scss
+++ b/findly-builder/src/app/components/summary/summary.component.scss
@@ -467,13 +467,13 @@
                             border-bottom: 1px solid #e5e8ec;
                             .title{
                                 padding-left: 0;                                                          
-                                color: #26344a;
+                                color: #202124;
                                 font-size: 14px;
                             }
                             .count{
                                 text-align: right;
                                 padding-right: 0;
-                                color: #26344a;
+                                color: #202124;
                                 font-size: 14px;
                             }
                         }
