--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -12,7 +12,7 @@ input[type=text]:focus {
     background-color: #ffffff;
     outline: none;
     padding-left: 8px;
-    color: #26344a;
+    color: #202124;
     font-size: 14px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
