--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -983,4 +983,5 @@ div.divBlockEmptylastChild:first-child {
     height: 24px;
     line-height: 24px;
     text-align: center;
+    overflow: hidden;
 }
