--- a/findly-builder/src/app/scss/variables/variables.scss
+++ b/findly-builder/src/app/scss/variables/variables.scss
@@ -8,14 +8,14 @@ html, body {
 }
 
 // COLORS 
-$primaryColor:#26344a;
-$secondaryColor:#8a959f;
+$primaryColor:#202124;
+$secondaryColor:#9B9B9B;
 $hoverColor:#009dab;
 $btnHoverColor:#018490;
 $hoverTransparent:rgba(0, 157, 171, 0.1);
 $backgroundColor:#f2f3f5;
 $whiteColor:#ffffff;
-$borderColor:#e5e8ec;
+$borderColor:#BDC1C6;
 $warningRed:#ea1818;
 $transparent:transparent;
 $orange:#ec7d01;
