--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -208,7 +208,7 @@
                 .modal-title{
                     font-size: $font-xxl;
                     font-weight: 300;  
-                    color: #26344a;
+                    color: #202124;
                 }
             }
             .modal-body{
