--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="faq-content-boxes">
-            <div class="content">
+            <div class="content left-content">
                 <div class="content-boxes faq_tasks_list">
                     <div class="header-sec">
                         <div class="kr-sg-checkbox">
@@ -113,9 +113,9 @@
                     </div>
                 </div>
             </div>            
-            <div class="content">
+            <div class="content right-content">
                 <div class="content-boxes train_your_questions">
-                    <div class="header-sec row m-0">
+                    <div class="header-sec row m-0 d-none">
                         <div class="col-4 p-0 title">Train your questions</div>
                         <div class="col-8 p-0 title text-right" *ngIf="selectedFaq">
                             <span class="questions-count">Alternate Questions ({{(selectedFaq.alternateQuestions?selectedFaq.alternateQuestions.length:0)}})</span>
