--- a/findly-builder/src/app/components/manage-intent/manage-intent.component.scss
+++ b/findly-builder/src/app/components/manage-intent/manage-intent.component.scss
@@ -370,8 +370,8 @@
     }    
 }
 
-.mb-8{
-    margin-bottom: 8px;
+.mb-15{
+    margin-bottom: 15px;
 }
 
 :host ::ng-deep .example-chip-list {
@@ -388,7 +388,7 @@
                         border-radius: 3px;
                         border: solid 1px #e5e8ec;        
                         margin: 0;
-                        font-family: Lato !important;
+                        font-family: Inter !important;
                         .mat-input-element{
                             margin: 0;
                             border: 0;
@@ -474,7 +474,7 @@
     margin: 10%;
     .err-msg {
         font-size: 20px;
-        color: #26344a;
+        color: #202124;
         margin-top: 20px;
     }
 }
@@ -485,7 +485,7 @@
     text-align: center;
     font-size: 24px;
     padding: 12px 0;
-    color: #26344a;
+    color: #202124;
     font-weight: 300;
     img{
         margin: 11px 20px;
