--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -904,7 +904,7 @@ and open the template in the editor.
     .table-title-info{
         padding: 22px 0px 20px 10px;
         .title{
-            color: #26344a;
+            color: #202124;
             font-size: 14px;
             font-weight: bold;
         }
@@ -997,7 +997,7 @@ and open the template in the editor.
                         font-size: 18px;
                         height: 100%;
                         left: 10px;
-                        color: #26344a;
+                        color: #202124;
                     }
                     &.collapsed{
                         &::before{
@@ -1012,7 +1012,7 @@ and open the template in the editor.
                             font-size: 18px;
                             height: 100%;
                             left: 10px;    
-                            color: #26344a;                        
+                            color: #202124;                        
                         }
                     }
                 }
@@ -1030,7 +1030,7 @@ and open the template in the editor.
         div{
             margin-left: 21px;
             i{
-                color: #26344a;
+                color: #202124;
                 font-size: 14px;
             }
         }
@@ -1073,7 +1073,7 @@ and open the template in the editor.
                 vertical-align: middle;
                 // border-bottom: 1px solid $borderColor;
                 padding: 0px 20px;
-                color: #26344a;
+                color: #202124;
                 line-height: 1.29;
                 font-size: 14px;
                 max-width: 100%;
@@ -1120,7 +1120,7 @@ and open the template in the editor.
                                 a{
                                     line-height: 40px;
                                     padding: 0 12px;
-                                    color: #26344a;
+                                    color: #202124;
                                     font-size: 14px;
                                     img{
                                         margin-right: 10px;
@@ -1168,7 +1168,7 @@ and open the template in the editor.
                         opacity: 0.3;
                     }
                     .col{
-                        color: #26344a;
+                        color: #202124;
                         opacity: 0.3;
                     }
                 }
@@ -1576,8 +1576,8 @@ and open the template in the editor.
     }
     input{
         background-color: $whiteColor;
-        border: solid 1px $borderColor;
-        border-radius: 2px;
+        border: solid 1px #BDC1C6;
+        border-radius: 4px;
         height: 34px;
         padding: 10px;
         font-size: 14px;
@@ -1645,8 +1645,8 @@ and open the template in the editor.
     }
     textarea{
         background-color: $whiteColor;
-        border: solid 1px $borderColor;
-        border-radius: 2px;
+        border: solid 1px #BDC1C6;
+        border-radius: 4px;
         min-height: 100px;
         padding: 2px 10px 10px 10px;
         font-size: 14px;
